<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ChooseLevelFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/chooseLevel"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button_level_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/testLevel"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/background_button_test"/>

        <Button
            android:id="@+id/button_level_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/easyLevel"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/background_button_easy"/>

        <Button
            android:id="@+id/button_level_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/normalLevel"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/background_button_normal"/>

        <Button
            android:id="@+id/button_level_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/hardLevel"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/background_button_hard"/>

    </LinearLayout>
</FrameLayout>